adding new background images and links

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>KAITLYN HOVA</title>
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -28,10 +29,13 @@
         <div class="code">
           <p>Code</p>
         </div>
-        <div class="left-brain-btn">
-          <h4>LEFT </h4>
-          <p>brain</p>
-        </div>
+        <a class="left-brain-btn" href="/leftbrain">
+          <div>
+            <h4>LEFT </h4>
+            <p>brain</p>
+            <i class="fa fa-angle-left"></i>
+          </div>
+        </a>
       </div>
       <div class="col-xs-6 right-bars no-padding">
         <div class="music">
@@ -43,10 +47,13 @@
         <div class="art">
           <p>Art</p>
         </div>
-        <div class="right-brain-btn">
-          <h4>RIGHT </h4>
-          <p>brain</p>
-        </div>
+        <a class="right-brain-btn" href="/rightbrain">
+          <div>
+            <h4>RIGHT </h4>
+            <p>brain</p>
+            <i class="fa fa-angle-right"></i>
+          </div>
+        </a>
       </div>
     </div>
   </div>
