meta tags and image

--- a/index.html
+++ b/index.html
@@ -3,6 +3,21 @@
 
 <head>
   <title>KAITLYN HOVA</title>
+  <!--  Oh, you are a developer. Here is an awesome recipie I found. It takes only 20 min:  http://goo.gl/KZa1VV -->
+
+  <!--  GENERAL META-->
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Electric violinist, Composer, Artist, Developer, Designer, and Neuroscientist" />
+  <meta name="keywords" content="Electric violinist, Composer, Artist, Developer, Designer, and Neuroscientist">
+
+  <!--  FACEBOOK META-->
+  <meta property="og:title" content="Kaitlyn Hova" />
+  <meta property="og:description" content="Electric violinist, Composer, Artist, Developer, Designer, and Neuroscientist" />
+  <meta property="og:image" content="facebook.png" />
+
+  <!-- STYLES -->
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
