adding favicon and moving around images into images folder

--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
   <!--  FACEBOOK META-->
   <meta property="og:title" content="Kaitlyn Hova" />
   <meta property="og:description" content="Electric violinist, Composer, Artist, Developer, Designer, and Neuroscientist" />
-  <meta property="og:image" content="facebook.png" />
+  <meta property="og:image" content="images/facebook.png" />
+
+  <!-- FAVICON -->
+  <link rel="shortcut icon" href="images/fav.png">
 
   <!-- STYLES -->
   <link rel="stylesheet" href="css/bootstrap.css">
@@ -27,11 +30,11 @@
   <div class="stuff">
     <div class="text">
       <h1> KAITLYN HOVA </h1>
-      <img class="kaitlyn-hova-face" src="face-cut.png">
+      <img class="kaitlyn-hova-face" src="images/face-cut.png">
     </div>
     <ul id="synesthesia-notes">
-      <li class="layer sidenotes" data-depth="0.40"><img  src="synesthesia2.png"></li>
-      <li class="layer notes topnotes" data-depth="0.10"><img src="synesthesia3.png"></li>
+      <li class="layer sidenotes" data-depth="0.40"><img  src="images/synesthesia2.png"></li>
+      <li class="layer notes topnotes" data-depth="0.10"><img src="images/synesthesia3.png"></li>
     </ul>
     <div id="bars">
       <div class="col-xs-6 left-bars no-padding">
